First commit made of main div, title, img

--- a/index.html
+++ b/index.html
@@ -9,10 +9,26 @@
 </head>
 <body>
 
+<div id = "main">
+
+    <h1 id="title"> Norman Borlaug </h1>
+
+  <div id="img-div">
+
+<img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg " id="image">
 
 
 
+
+
+
+  </div>  
+
+
+</div>
     
 
 </body>
+
+
 </html>
