--- a/index.html
+++ b/index.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
 <html>
-<html lang="en">
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <link rel="stylesheet" href="/main.css" />
+    </head>
+    <body>
+      <div id="main">
+        <h1 id="title">Norman Borlaug</h1>
 
-<head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="/main.css">
-
-</head>
-<body>
-
-<div id = "main">
-
-    <h1 id="title"> Norman Borlaug </h1>
-
-  <div id="img-div">
-
-<img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg " id="image">
-
-
-
-
-
-
-  </div>  
-
-
-</div>
-    
-
-</body>
-
-
+        <div id="img-div">
+          <img
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg "
+            id="image"
+          />
+          <figure>
+            <figcaption id="img-caption">
+              Norman Borlaug shows wheat in the field with other people.
+            </figcaption>
+          </figure>
+        </div>
+        <div id="tribute-info"></div>
+      </div>
+    </body>
+  </html>
 </html>
