Final commit with id's. image and paragraphs

--- a/index.html
+++ b/index.html
@@ -19,9 +19,28 @@
               Norman Borlaug shows wheat in the field with other people.
             </figcaption>
           </figure>
-        </div>
-        <div id="tribute-info"></div>
+
+          <p id ="tribute-info">
+          <p><strong>1914</strong> - Born in Cresco, Iowa </p>
+          <p><strong>1933</strong> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression
+             era program known as the "National Youth Administration" </p>
+             <p><strong>1935</strong> - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them",
+                 he said. "All of this left scars on me." </p>
+                 <p><strong>1937</strong> - Bor - Finishes university and takes a job in the US Forestry Servicen in Cresco, Iowa </p>
+                 <p><strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology </p>
+                 <p><strong>1945</strong> -  Discovers a way to grown wheat twice each season, doubling wheat yields </p>
+                 <p><strong>1970</strong> -  receives the Nobel Peace Prize </p>
+                 <p><strong>1984</strong> -  becomes a distinguished professor at Texas A&M University </p>
+                 <p><strong>2009</strong> -  dies at the age of 95. </p>
+
+          </p>
+          <a id="tribute_link" href="https://www.nobelprize.org/prizes/peace/1970/borlaug/biographical/" target="_blank">Borlaug Nobelprize biography</a> 
+        
+        
+
       </div>
+
     </body>
+
   </html>
-</html>
+
